// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductDetailsDialog rendering tests ProductDetailsDialog - open false test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="product-detials-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`ProductDetailsDialog rendering tests ProductDetailsDialog - open true - product BUNDLE - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="product-detials-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg max-w-2xl max-h-[90vh] overflow-y-auto"
        data-slot="dialog-content"
        data-testid="mock-react-dialog-content"
      >
        <div
          class="flex flex-col gap-2 text-center sm:text-left"
          data-slot="dialog-header"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <div
              class="flex-1"
            >
              <div
                class="font-semibold text-2xl mb-2"
                data-slot="dialog-title"
                data-testid="mock-react-dialog-title"
              >
                name 1
              </div>
              <div
                class="flex items-center gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 bg-green-100 text-green-700 border-green-200"
                  data-slot="badge"
                >
                  BUNDLE
                </span>
                <span
                  class="text-2xl font-bold text-indigo-600"
                >
                  $
                  59.99
                </span>
              </div>
            </div>
          </div>
          <div
            class="text-muted-foreground text-base mt-3"
            data-slot="dialog-description"
            data-testid="mock-react-dialog-description"
          >
            description 1
          </div>
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-4"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          class="space-y-6"
        >
          <div>
            <h4
              class="text-sm font-semibold text-slate-700 mb-3 flex items-center gap-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-package h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                />
                <path
                  d="M12 22V12"
                />
                <polyline
                  points="3.29 7 12 12 20.71 7"
                />
                <path
                  d="m7.5 4.27 9 5.15"
                />
              </svg>
              Included Templates (
              1
              )
            </h4>
            <div
              class="space-y-2"
            >
              <div
                class="bg-slate-50 border border-slate-200 rounded-lg p-3"
              >
                <h5
                  class="font-medium text-slate-900 text-sm mb-1"
                >
                  title 2
                </h5>
                <p
                  class="text-xs text-slate-600 line-clamp-2"
                >
                  content 2
                </p>
                <div
                  class="flex flex-wrap gap-1 mt-2"
                >
                  <span
                    class="text-xs px-1.5 py-0.5 bg-white text-slate-600 rounded border border-slate-200"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-1.5 py-0.5 bg-white text-slate-600 rounded border border-slate-200"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-1.5 py-0.5 bg-white text-slate-600 rounded border border-slate-200"
                  >
                    category 2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex gap-3 pt-4 sticky bottom-0 bg-white border-t mt-6 -mx-6 px-6 py-4"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 flex-1 cursor-pointer"
            data-slot="button"
            data-testid="add-to-cart-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-cart w-4 h-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
            Add to Cart
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4"
            data-slot="button"
            data-testid="close-dialog-btn"
          >
            Close
          </button>
        </div>
        <button>
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductDetailsDialog rendering tests ProductDetailsDialog - open true - product TEMPLATE - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="product-detials-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg max-w-2xl max-h-[90vh] overflow-y-auto"
        data-slot="dialog-content"
        data-testid="mock-react-dialog-content"
      >
        <div
          class="flex flex-col gap-2 text-center sm:text-left"
          data-slot="dialog-header"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <div
              class="flex-1"
            >
              <div
                class="font-semibold text-2xl mb-2"
                data-slot="dialog-title"
                data-testid="mock-react-dialog-title"
              >
                name 1
              </div>
              <div
                class="flex items-center gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 bg-blue-100 text-blue-700 border-blue-200"
                  data-slot="badge"
                >
                  TEMPLATE
                </span>
                <span
                  class="text-2xl font-bold text-indigo-600"
                >
                  $
                  59.99
                </span>
              </div>
            </div>
          </div>
          <div
            class="text-muted-foreground text-base mt-3"
            data-slot="dialog-description"
            data-testid="mock-react-dialog-description"
          >
            description 1
          </div>
        </div>
        <div
          class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-4"
          data-orientation="horizontal"
          data-slot="separator"
          role="none"
        />
        <div
          class="space-y-6"
        >
          <div
            class="space-y-4"
          >
            <div>
              <h4
                class="text-sm font-semibold text-slate-700 mb-2 flex items-center gap-2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
                Recommended Model
              </h4>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-sm"
                data-slot="badge"
              >
                model 1
              </span>
            </div>
            <div>
              <h4
                class="text-sm font-semibold text-slate-700 mb-2"
              >
                Categories
              </h4>
              <div
                class="flex flex-wrap gap-2"
              >
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
                  data-slot="badge"
                >
                  category 0
                </span>
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
                  data-slot="badge"
                >
                  category 1
                </span>
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
                  data-slot="badge"
                >
                  category 2
                </span>
              </div>
            </div>
            <div>
              <h4
                class="text-sm font-semibold text-slate-700 mb-2"
              >
                Template Preview
              </h4>
              <div
                class="bg-slate-50 border border-slate-200 rounded-lg p-4 max-h-48 overflow-y-auto"
              >
                <p
                  class="text-sm text-slate-700 whitespace-pre-wrap line-clamp-6"
                >
                  content 1
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex gap-3 pt-4 sticky bottom-0 bg-white border-t mt-6 -mx-6 px-6 py-4"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 flex-1 cursor-pointer"
            data-slot="button"
            data-testid="add-to-cart-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-cart w-4 h-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
            Add to Cart
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4"
            data-slot="button"
            data-testid="close-dialog-btn"
          >
            Close
          </button>
        </div>
        <button>
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
